// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminConsolePluginsIndex.getPluginEntries should return map with the text extracted from plugins 1`] = `
Object {
  "plugin_mattermost-autolink": Array [
    "Autolink",
    "mattermost-autolink",
    "Configure this plugin directly in the config.json file. Learn more [in our documentation](https://github.com/mattermost/mattermost-plugin-autolink/blob/master/README.md).

To report an issue, make a suggestion or a contribution, [check the plugin repository](https://github.com/mattermost/mattermost-plugin-autolink).",
    "Enable administration with /autolink command",
    "EnableAdminCommand",
  ],
}
`;

exports[`AdminConsolePluginsIndex.getPluginEntries should return map with the text extracted from plugins 2`] = `
Object {
  "plugin_Some-random-plugin": Array [
    "Random",
    "Some-random-plugin",
    "Generate with /generateRand command",
    "/generateRand 10",
    "GenerateRandomNumber",
    "set range with /setRange command",
    "setRange",
  ],
  "plugin_mattermost-autolink": Array [
    "Autolink",
    "mattermost-autolink",
    "Configure this plugin directly in the config.json file. Learn more [in our documentation](https://github.com/mattermost/mattermost-plugin-autolink/blob/master/README.md).

To report an issue, make a suggestion or a contribution, [check the plugin repository](https://github.com/mattermost/mattermost-plugin-autolink).",
    "Enable administration with /autolink command",
    "EnableAdminCommand",
  ],
}
`;
